# MIYO-Kotlin

./: .git-push.env.example  .gitignore  .openclaude-profile.json  TODO.md  build.gradle.kts  fixLINTANDUNIT.TXT  gradlew  package-lock.json  package.json  settings.gradle.kts  text.txt  touch.txt
.beads/: metadata.json
.github/workflows/: build.yml  create-pr.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/source-packages/fanmtl/: main.js  manifest.json
app/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp  miniz.c  miniz.h  zip_archive.cpp  zip_archive.h
app/src/main/cpp/epub/: epub_cover.cpp  epub_cover.h  epub_css.cpp  epub_css.h  epub_parser.cpp  epub_parser.h  epub_renderer.cpp  epub_renderer.h  epub_types.h
app/src/main/cpp/storage/: cache_manager.h
app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_miyu_history.xml  ic_miyu_home.xml  ic_miyu_library.xml  ic_miyu_settings.xml  ic_miyu_terms.xml  ic_nav_browse.xml  ic_nav_history.xml  ic_nav_home.xml  ic_nav_library.xml  ic_nav_settings.xml  ic_setup_library_vault.xml  ic_setup_palette_cards.xml  ic_setup_private_device.xml  ic_setup_reader_tuning.xml  ic_theme_blossom.xml  ic_theme_coffee.xml  ic_theme_matcha.xml  ic_theme_parchment.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: file_paths.xml
scripts/: build-source-packages.mjs  git-push-with-pat.sh  test_epub_search.py  verify_parity.py
source-plugins/: README.md  catalog.json
source-plugins/templates/: source-package.js
(+102 files in other folders)
